// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon \`component\` prop can access to svg defs if has children 1`] = `
<span
  class="anticon my-home-icon"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
    />
  </svg>
</span>
`;

exports[`Icon should give warning and render <i>{null}</i> 1`] = `
<span
  class="anticon"
  role="img"
/>
`;

exports[`Icon should render to a <i class="xxx"><svg>...</svg></i> 1`] = `null`;

exports[`Icon should support basic usage 1`] = `<div />`;

exports[`Icon should support config global two-tone primary color 1`] = `null`;

exports[`Icon should support older usage 1`] = `<div />`;

exports[`Icon should support pass svg paths as children 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</span>
`;

exports[`Icon should support svg react component 1`] = `
<span
  class="anticon my-home-icon"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
    />
  </svg>
</span>
`;

exports[`Icon should support two-tone icon 1`] = `null`;

exports[`Icon support render svg as component 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  />
</span>
`;

exports[`Icon.createFromIconfontCN() should support iconfont.cn 1`] = `
<div
  class="icons-list"
>
  <span
    class="anticon"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-tuichu"
      />
    </svg>
  </span>
  <span
    class="anticon"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-facebook"
      />
    </svg>
  </span>
  <span
    class="anticon"
    role="img"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-twitter"
      />
    </svg>
  </span>
</div>
`;
